@@ -183,6 +183,7 @@ Muxers/Demuxers:
   raw.c                                 Michael Niedermayer
   rm.c                                  Roberto Togni
   segafilm.c                            Mike Melanson
+  voc.c                                 Aurelien Jacobs
   wav.c                                 Michael Niedermayer
   wc3movie.c                            Mike Melanson
   westwood.c                            Mike Melanson
